1.4.3
- Improve 'new version' notification (no more a warning look, include link to website)
- Better handle when the zoom parameter is missing in a .aria file (which happens when loading a file generated by an old version)
- Fix a case where looping would fail
- Fix more truncated texts on linux

1.4.2
- Fixed bug that could cause Aria to stop playing prematurely in a song using varying tempo
- Fixed sending playback to external device on OSX
- Fixed playback and export issues that could ensue when a note was placed just before the playback start
- Fixed issues with loop
- Fixed playback sometimes stopping very sharply, not leaving time for notes to ring
- Mark the measure where the song starts in the measure bar
- Fix some dialogs appearing on the wrong screen in multi-monitor setups, especially on linux
- Start using more native button bars in dialogs (Alexis Archambault)
- Fix a few truncated labels on linux

1.4.1
- Use more standard 44100 Hz when exporting to sampled audio on OSX
- On Linux, allow exporting to sampled audio using Fluidsynth
- Fixed exporting midi track names (Alexis Archambault)
- Active dropping documents on the main frame on all OSes (Alexis Archambault)
- Improve look of loop button on Linux when using wx 2.9
- Add setting to remember window location
- Make Aria work correctly in OpenGL mode on Linux
- Move config : on linux, to ~/.config, on Windows, out of the registry

1.4.0
- Fix shift + mouse wheel horizontal scrolling on windows
- Fixed bug when looping drums
- Support reading files with accents in their name on Windows
- Improve printing by setting appropriate caps to measure bars
- Work around wxGCDC bug to ensure that lines are of the correct thickness when printing
- Fix rare memory leak
- Further tweak fonts on Windows
- Fix incorrect drumkit label when importing a midi file with manual channel management
- Improve exported midis to make it less likely that an additional empty measure will be appended at