@@ -3,6 +3,7 @@
 - Better handle when the zoom parameter is missing in a .aria file (which happens when loading a file generated by an old version)
 - Fix a case where looping would fail
 - Fix more truncated texts on linux
+- Fix opening files with double-click on Linux
 
 1.4.2
 - Fixed bug that could cause Aria to stop playing prematurely in a song using varying tempo
